--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build and push docker image
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          image: nodatabase/my-app
+          image: nodatabase/my-app-new
           registry: docker.io
           addLatest: true
           username: ${{ secrets.DOCKERHUB_USERNAME }}
