--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "lint:js": "eslint --max-warnings 0 routes/**/*.js",
+    "lint:js": "eslint --max-warnings 0 ../**/*.js",
     "lint": "npm run lint:js"
   },
   "keywords": [],
